--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <a href="https://www.facebook.com/share/1AuaV9gZ44/" target="_blank"  >Facebook
       <i class="fab fa-facebook"></i>
   </a>
-  <a href="https://youtube.com/@fahadgaming2007?si=7h4ybhfVHAJipwRY" target="_blank">Instagram
+  <a href="https://www.instagram.com/fahad_abir2007?igsh=MWtnM3h5cGR1Nmd3eQ==" target="_blank">Instagram
     <i class="fab fa-instagram"></i>
   </a>
   <a href="https://youtube.com/@fahadgaming2007?si=7h4ybhfVHAJipwRY" target="_blank">YouTube
